@@ -8,6 +8,9 @@ Revision history for Run-Parts
         Fix number of skipped tests in t/basic-functionality.t on
         non-debianoid platforms.
 
+        Hack around RT#66485 to be able to use done_testing() together
+        with Test::NoWarnings.
+
 0.07    2014-09-10 00:33:03+02:00
 
         Add test that the change log conforms to CPAN::Changes::Spec.
